[package]
name = "aggregate_sig"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[features]
ffi = ["ffi_helpers", "id/ffi"]
default = ["ffi"]

[dependencies]
rand = "=0.7"
sha2 = "0.10"
rayon = "1.5"
generic-array = "0.14"
pairing = "0.15"
ff = "0.5"
serde = "1.0"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dependencies.ffi_helpers]
path= "../ffi_helpers"
version = "0"
optional = true

[dependencies.random_oracle]
path = "../random_oracle"
version = "0"

[dependencies.id]
path="../id"
version = "0"
default-features = false

[dev-dependencies]
criterion = "0.3.3"

[lib]
name = "aggregate_sig"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bench]]
name = "bench"
harness = false
