[package]
name = "bulletproofs"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[lib]
name = "bulletproofs"
crate-type = ["rlib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = "0.15"
ff = "0.5"
rand = "=0.7"
group = "0.2"
serde = "1.0"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.random_oracle]
path = "../random_oracle"
version = "0"

[dependencies.pedersen_scheme]
path = "../pedersen_scheme"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "set_proof_bench"
harness = false