[package]
name = "concordium_base"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2021"
license-file = "../../LICENSE"

[dependencies]
ff = "0.5"
sha2 = "0.10"
anyhow = "1.0"
rand_core = "=0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
libc = "0.2"
chrono = "0.4.19"
ed25519-dalek = "=1.0"
byteorder = "1.3"
hex = "0.4"
itertools = "0.10"
either = "1.6"
pairing = "0.15"
derive_more = "0.99"
thiserror = "1.0"
rand = "0.7"
num = "0.4"
# See https://github.com/serde-rs/json/issues/505 for the need to be careful.
rust_decimal = { version = "1.25", features = ["serde-float", "serde-arbitrary-precision"]}
num-bigint = "0.4"
num-traits = "0.2"
bs58 = { version = "0.4", features = ["check"] }
leb128 = "0.2"

# Local dependencies
[dependencies.concordium-contracts-common]
version = "*"
path = "../../concordium-contracts-common/concordium-contracts-common"
features = ["derive-serde", "sdk"]

[features]
default = ["ffi"]  # TODO: Remove after development.
ffi = []

[lib]
name = "concordium_base"
crate-type = ["rlib"]

[dev-dependencies]
criterion = "0.4"
rand = {version = "0.7", features = ["small_rng"]}

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "multiexp_bench"
harness = false


[[bench]]
name = "elgamal_benchmarks"
harness = false

[[bench]]
name = "encrypted_transfers_benchmarks"
harness = false

[[bench]]
name = "aggregate_signatures"
harness = false


[[bench]]
name = "bulletproofs"
harness = false

[[bench]]
name = "set_proof_bench"
harness = false

[[bench]]
name = "eddsa_benchmarks"
harness = false

[[bench]]
name = "verify_cdi"
harness = false
	
[[bench]]
name = "aggr_dlog_commit_point"
harness = false
	
[[bench]]
name = "compute_message"
harness = false
required-features = ["test-helpers"]

[[bench]]
name = "commitment_to_share"
harness = false