[package]
name = "crypto_common"
version = "0.1.0"
authors = ["Concordium AG <contact@concordium.com>"]
edition = "2018"

[dependencies]
failure = "^0.1.5"
byteorder = "1.3"
pairing = "0.15"
ff = "0.5"
group = "0.2"
rand = "=0.7"
ed25519-dalek = "=1.0"
either = "1.6"
hex = "0.4"
serde = {version = "1.0", features = ["derive"]}
libc = "0.2"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "crypto_common"
crate-type = ["rlib", "staticlib", "cdylib"]
