[package]
name = "crypto_common"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"
license-file = "../../LICENSE"

[features]
encryption = ["block-modes", "aes", "base64", "pbkdf2", "sha2", "hmac"]

[dependencies]
failure = "^0.1.5"
byteorder = "1.3"
pairing = "0.15"
ff = "0.5"
group = "0.2"
rand = "=0.7"
ed25519-dalek = "=1.0"
either = "1.6"
hex = "0.4"
serde = {version = "1.0", features = ["derive"]}
libc = "0.2"
block-modes = { version = "0.7", optional = true }
aes = { version = "0.6", optional = true }
base64 = { version = "0.13", optional = true }
pbkdf2 = { version  = "0.6", optional = true } # 0.7 is currently the latest, but is not supported on 1.45.2
sha2 = { version  = "0.9", optional = true }
hmac = { version  = "0.10", optional = true }

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "crypto_common"
crate-type = ["rlib", "staticlib", "cdylib"]
