[package]
name = "crypto_common"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[features]
encryption = ["cbc", "aes", "base64", "pbkdf2", "hmac"]

[dependencies]
byteorder = "1.3"
pairing = "0.15"
ff = "0.5"
group = "0.2"
rand = "=0.7"
ed25519-dalek = "=1.0"
either = "1.6"
hex = "0.4"
serde = {version = "1.0", features = ["derive"]}
libc = "0.2"
cbc = { version = "0.1.2", features = ["std"], optional = true }
aes = { version = "0.8", optional = true }
base64 = { version = "0.13", optional = true }
pbkdf2 = { version  = "0.11", optional = true }
sha2 = { version  = "0.10"}
hmac = { version  = "0.12", optional = true }
anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dependencies.concordium-contracts-common]
path = "../../concordium-contracts-common/concordium-contracts-common"
version = "*"
features = ["derive-serde"]

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "crypto_common"
crate-type = ["rlib", "staticlib", "cdylib"]
