[package]
name = "curve_arithmetic"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"


[dependencies]
rand = "=0.7"
pairing = "0.15"
ff = "0.5"
group = "0.2"
byteorder = "1.3"
sha2 = "0.10"
serde = {version = "1.0"}
anyhow = "1.0"
thiserror = "1.0"

[dependencies.crypto_common]
path = "../crypto_common"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"

[lib]
name = "curve_arithmetic"
crate-type = ["rlib", "staticlib", "cdylib"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "multiexp_bench"
harness = false
