[package]
name = "dodis_yampolskiy_prf"
version = "0.1.0"
authors = ["Concordium AG <info@concordium.com>"]
edition = "2018"

[dependencies]
failure       = "0.1"
ff = "0.4"
rand    = "0.4"
rand_core = "0.5"
clear_on_drop = "0.2"
serde = "1.0"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version="0"

[dependencies.pairing]
path = "../pairing"
version = "0"

[lib]
name = "dodis_yampolskiy_prf"
crate-type = ["rlib", "staticlib", "cdylib"]
