[package]
name = "dodis_yampolskiy_prf"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
pairing = "0.15"
ff = "0.5"
rand = "=0.7"
rand_core = "=0.5"
serde = "1.0"
thiserror = "1.0"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version="0"

[dependencies.crypto_common]
path = "../crypto_common"
version="0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version="0"


[lib]
name = "dodis_yampolskiy_prf"
crate-type = ["rlib", "staticlib", "cdylib"]
