[package]
name="ec_vrf_ed25519_sha256"
authors=["concordium AB"]
version="0.0.1"

[dependencies]
rand      = "0"
rand_core = { version = "0.3.0", default-features = false }
clear_on_drop = "0"
failure       = "0"
sha2      = "0"
signatory = "0"
curve25519-dalek = "1"
serde = "1"

[lib]
name = "ec_vrf_ed25519"
crate-type = ["cdylib", "lib"]








