[package]
name="ec_vrf_ed25519_sha256"
authors = ["Concordium AG <info@concordium.com>"]
version="0.0.1"
edition = "2018"

[dependencies]
rand      = "0.6"
rand_core = "0.3"
clear_on_drop = "0.2"
failure       = "0.1"
sha2      = "0.8"
signatory = "0.12"
curve25519-dalek = "1.2"
serde = "1.0"

[lib]
name = "ec_vrf_ed25519"
crate-type = ["rlib", "staticlib", "cdylib"]
