[package]
name="ec_vrf_ed25519_sha256"
authors = ["Concordium AG <contact@concordium.com>"]
version="0.0.1"
edition = "2018"

[dependencies]
rand      = "=0.7"
rand_core = "=0.5"
clear_on_drop = "0.2"
failure       = "0.1"
sha2      = "0.8"
signatory = "0.12"
curve25519-dalek = "2.0"
serde = "1.0"
libc = "0.2"
subtle = "2.1"

[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[lib]
name = "ec_vrf_ed25519"
crate-type = ["rlib", "staticlib", "cdylib"]
