[package]
name="ecvrf"
authors = ["Concordium AG <developers@concordium.com>"]
version="0.0.1"
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
rand = "=0.7"
rand_core = "=0.5"
zeroize = "1.1.0"
sha2 = "0.9"
signatory = "0.21"
curve25519-dalek = "3.0"
serde = "1.0"
libc = "0.2"
subtle = "2.3"
generic-array = "0.14"
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
clear_on_drop = { version = "0.2", features = [ "no_cc" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clear_on_drop = { version = "0.2" }

[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[lib]
name = "ecvrf"
crate-type = ["rlib", "staticlib", "cdylib"]
