[package]
name="ecvrf"
authors = ["Concordium AG <developers@concordium.com>"]
version="0.0.1"
edition = "2018"
license-file = "../../LICENSE"

[features]
ffi = ["ffi_helpers"]
default = ["ffi"]

[dependencies]
rand = "=0.7"
zeroize = "1.1.0"
sha2 = "0.10"
curve25519-dalek = "3"
libc = "0.2"
subtle = "2.3"
thiserror = "1.0"

[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"
optional = true

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[lib]
name = "ecvrf"
crate-type = ["rlib", "staticlib", "cdylib"]
