[package]
name = "eddsa_ed25519"
version = "0.1.0"
authors = ["Concordium AG <info@concordium.com>"]
edition = "2018"

[dependencies]
ed25519-dalek = "1.0.0-pre.1"
curve25519-dalek = "1.2"
rand          = "0.6"
serde         = "1.0"
sha2      = "0.8"
failure   = "0.1"
libc = "0.2"

[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"
[dependencies.random_oracle]
path = "../random_oracle"
version = "0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "eddsa_benchmarks"
harness = false

[lib]
name = "eddsa_ed25519"
crate-type = ["rlib", "staticlib", "cdylib"]
