[package]
name = "eddsa_ed25519"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[features]
ffi = ["ffi_helpers"]
default = ["ffi"]

[dependencies]
ed25519-dalek = "=1.0"
curve25519-dalek = "3"
rand = "=0.7"
serde = "1.0"
sha2 = "0.10"
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"

[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"
optional = true

[dependencies.random_oracle]
path = "../random_oracle"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "eddsa_benchmarks"
harness = false

[lib]
name = "eddsa_ed25519"
crate-type = ["rlib", "staticlib", "cdylib"]
