[package]
name = "elgamal"
version = "0.1.0"
authors = ["Concordium AG <info@concordium.com>"]
edition = "2018"

[dependencies]
pairing = "0.14"
failure       = "0.1"
rand    = "0.4"
rand_core = "0.5"
clear_on_drop = "0.2"
bitvec ="0.9"
rayon = "1.1"
serde = {version = "1.0", optional = true}
libc  = "0.2"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "elgamal_benchmarks"
harness = false

[lib]
name = "elgamal"
crate-type = ["rlib", "staticlib", "cdylib"]
