[package]
name = "elgamal"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
failure = "0.1"
pairing = "0.15"
ff = "0.5"
rand = "=0.7"
rand_core = "=0.5"
clear_on_drop = "0.2"
serde = "1.0"
libc = "0.2"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "elgamal_benchmarks"
harness = false

[lib]
name = "elgamal"
crate-type = ["rlib", "staticlib", "cdylib"]
