[package]
name = "encryptedamounts"
version = "0.1.0"
authors = ["Concordium AG <contact@concordium.com>"]
edition = "2018"

[lib]
name = "encryptedamounts"
crate-type = ["rlib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = "0.15"
ff = "0.5"
rand    = "=0.7"


[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dependencies.bulletproofs]
path = "../bulletproofs"
version = "0"

[dependencies.elgamal]
path = "../elgamal"
version = "0"

[dependencies.id]
path = "../id"
version = "0"

[dependencies.random_oracle]
path = "../random_oracle"
version = "0"

[dependencies.pedersen_scheme]
path = "../pedersen_scheme"
version = "0"