[package]
name = "encrypted_transfers"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
ff = "0.5"
sha3 = "0.9"
sha2 = "0.9"
failure = "0.1"
itertools = "0.9"
pairing = "0.15"
serde = "1.0"
libc = "0.2"

[dependencies.eddsa_ed25519]
path = "../eddsa_ed25519"
version = "0"
[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"
[dependencies.elgamal]
path = "../elgamal"
version = "0"
[dependencies.pedersen_scheme]
path = "../pedersen_scheme"
version = "0"
[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"
[dependencies.crypto_common]
path = "../crypto_common"
version = "0"
[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"
[dependencies.id]
path = "../id"
version = "0"
[dependencies.bulletproofs]
path = "../bulletproofs"
version = "0"
[dependencies.random_oracle]
path = "../random_oracle"
version = "0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "=0.7", features = [ "wasm-bindgen" ] }
wasm-bindgen = "0.2.60"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "=0.7"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "enc_trans_benchmarks"
harness = false

[lib]
name = "encrypted_transfers"
crate-type = ["rlib", "staticlib", "cdylib" ]
