[package]
name = "id"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
ff = "0.5"
sha3 = "0.9"
sha2 = "0.9"
anyhow = "1.0"
rand_core = "=0.5"
clear_on_drop = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
libc = "0.2"
chrono = "0.4.7"
ed25519-dalek = "=1.0"
byteorder = "1.3"
hex = "0.4"
itertools = "0.9"
rayon = "1.4"
either = "1.6"
pairing = "0.15"
num = "0.3"
derive_more = "0.99"
thiserror = "1.0"

# only for printing account addresses
base58check = "0.1"

[dependencies.eddsa_ed25519]
path = "../eddsa_ed25519"
version = "0"
[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"
[dependencies.ps_sig]
path = "../ps_sig"
version = "0"
[dependencies.elgamal]
path = "../elgamal"
version = "0"
[dependencies.dodis_yampolskiy_prf]
path = "../dodis_yampolskiy_prf"
version = "0"
[dependencies.pedersen_scheme]
path = "../pedersen_scheme"
version = "0"
[dependencies.ffi_helpers]
path = "../ffi_helpers"
version = "0"
[dependencies.crypto_common]
path = "../crypto_common"
version = "0"
[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"
[dependencies.random_oracle]
path = "../random_oracle"
version = "0"
[dependencies.bulletproofs]
path = "../bulletproofs"
version = "0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "=0.7", features = [ "wasm-bindgen" ] }
wasm-bindgen = "0.2.60"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "=0.7"

[dev-dependencies]
criterion = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[lib]
name = "id"
crate-type = ["rlib", "staticlib", "cdylib" ]

[[bench]]
name = "verify_cdi"
harness = false
	
[[bench]]
name = "aggr_dlog_commit_point"
harness = false

[features]
default = ["ffi"]
ffi = []
wasm-browser-test = ["ffi"]
