[package]
name = "key_derivation"
version = "1.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.2"
ed25519-dalek = "1.0.0"
serde = "1"
pbkdf2 = "0.10"

[dependencies.ed25519_hd_key_derivation]
path = "../ed25519_hd_key_derivation"
version = "1.0.0"

[dependencies.keygen_bls]
path = "../keygen_bls"
version = "2.0.0"

[dependencies.concordium_base]
path = "../concordium_base"
version = "*"

[lib]
name = "key_derivation"
crate-type = ["rlib"]

[dev-dependencies]
hex = "0.4.3"