[package]
name = "keygen_bls"
version = "2.0.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
sha2 = "0.10"
hkdf = "0.12.0"
ff = "0.5"
hex = "0.4"
ark-bls12-381 = { version = "0.4" }

[dependencies.concordium_base]
path = "../concordium_base"
version = "*"

[lib]
name = "keygen_bls"
crate-type = ["rlib"]
