[package]
name = "pedersen_scheme"
version = "0.1.0"
authors = ["Concordium AG <info@concordium.com>"]
edition = "2018"

[dependencies]
failure       = "0.1"
rand    = "0.4"
rand_core = "0.5"
clear_on_drop = "0.2"
serde         = "1.0"
byteorder = "1.3"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.pairing]
path = "../pairing"
version = "0"

[lib]
name = "pedersen_scheme"
crate-type = ["rlib", "staticlib", "cdylib" ]
