[package]
name = "pedersen_scheme"
version = "0.1.0"
authors = ["Concordium AG <info@concordium.com>"]
edition = "2018"

[dependencies]
ff = "0.4"
failure       = "0.1"
rand    = "0.4"
rand_core = "0"
clear_on_drop = "0"
serde         = "1"
byteorder = "1.3"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0" 


[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0" 

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0" 

[dependencies.pairing]
git = "ssh://git@gitlab.com:22/Concordium/rust/external/pairing.git"
branch = "master"

[lib]
name = "pedersen_scheme"
crate-type = ["rlib", "staticlib", "cdylib" ]