[package]
name = "pedersen-scheme2"
version = "0.1.0"
authors = ["Concordium AG <info@concordium.com>"]
edition = "2018"

[dependencies]
pairing = "0"
failure       = "0"
rand    = "0.4"
rand_core = "0"
clear_on_drop = "0"
serde         = "1"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0" 

[lib]
name = "pedersen_scheme"
crate-type = ["rlib", "staticlib", "cdylib" ]
