[package]
name = "ps_sig"
version = "0.1.0"
authors = ["bassel <bassel.mannaa@gmail.com>"]
edition = "2018"

[dependencies]
failure       = "0.1"
ff = "0.4"
rand    = "0.4"
rand_core = "0.5"
clear_on_drop = "0.2"
bitvec ="0.14"
rayon = "1.1"
serde = "1.0"
libc  = "0.2"
byteorder = "1.3"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.pairing]
git = "ssh://git@gitlab.com:22/Concordium/rust/external/pairing.git"
branch = "master"

[dependencies.pedersen_scheme]
path= "../pedersen_scheme"
version = "0"

[dev-dependencies]
criterion = "0.2"

[lib]
name = "ps_sig"
crate-type = ["rlib", "staticlib", "cdylib"]
