[package]
name = "ps_sig"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
pairing = "0.15"
ff = "0.5"
rand = "=0.7"
rand_core = "=0.5"
serde = "1.0"
libc = "0.2"
byteorder = "1.3"
anyhow = "1.0"
thiserror = "1.0"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.pedersen_scheme]
path= "../pedersen_scheme"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[lib]
name = "ps_sig"
crate-type = ["rlib", "staticlib", "cdylib"]
